# llm-performance-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
configs/: benchmark.yaml  cpu.yaml  default.yaml  gpu.yaml
docs/: adding_datasets.md  adding_models.md  api.md  architecture.md  data_layout.md  datasets.md  models.md
docs/diagrams/: README.md  architecture.mmd  benchmark_types.mmd  data_layout.mmd  quality_pipeline.mmd  resume_logic.mmd
notebooks/: analise_resultados.ipynb
reports/: report.md  report.tex
reports/summary/: benchmark_resultados.csv  quality_resultados.csv  quality_resultados_v1.csv
scripts/: 00_check_data.py  01_setup_llama_cpp.sh  02_benchmark_models.py  03_quality_eval.py
src/: benchmark.py  cli_common.py  config.py  datasets.py  llama_runner.py  quality_eval.py  utils.py  validacao.py
src/benchmark/: __init__.py  future.py  inference.py  latency.py  memory.py  quality.py  quality_benchmark.py  quality_stats.py  quantization.py  throughput.py  throughput_benchmark.py
src/core/: __init__.py  benchmark_runner.py  experiment.py  registry.py
src/evaluators/: arithmetic.py  base.py  factory.py  generation.py  multiple_choice.py  qa.py
src/llm/: __init__.py  llama_runner.py  model_loader.py  tokenizer.py
src/metrics/: accuracy.py  exact_match.py  f1.py  latency.py  memory.py  throughput.py
src/reports/: __init__.py  _io.py  csv_report.py  latex_report.py  markdown_report.py
src/utils/: __init__.py  io.py  llama_parse.py  logging.py
src/visualization/: __init__.py  heatmap.py  (+2 more)
tests/: __init__.py
(+4 files in other folders)
